Song and Artist Listpreview, parseTo

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,13 +1,6 @@
-<app-header>Home</app-header>
+<app-header title="Home"></app-header>
+<app-songListPreview [songs]="topSongs" title="Top Songs"></app-songListPreview>
+<app-artistListPreview [artists]="topArtists" title="Top Artists"></app-artistListPreview>
+<app-songListPreview [songs]="lastReleasesByTopArtists" title="Last Releases"></app-songListPreview>
 <app-currentSong></app-currentSong>
-<h2>Top Songs</h2>
-<div>
-    <app-songPreview *ngFor="let song of topSongs" [src]="song.imageSrc" [title]="song.title" [type]="song.type"
-        [artist]="song.artist" [link]="song.link"></app-songPreview>
-</div>
-<h2>Top Artists</h2>
-<div>
-    <app-artistPreview *ngFor="let artist of topArtists" [src]="artist.imageSrc" [link]="artist.link"
-        [name]="artist.name"></app-artistPreview>
-</div>
 <app-navbar></app-navbar>
