--- a/src/app/features/currentSong/currentSong.component.scss
+++ b/src/app/features/currentSong/currentSong.component.scss
@@ -1,7 +1,7 @@
 :host {
     display: flex;
     background-color: black;
-    position: absolute;
+    position: fixed;
     left: 20px;
     right: 20px;
     padding: 10px;
