--- a/src/app/features/navbar/navbar.component.scss
+++ b/src/app/features/navbar/navbar.component.scss
@@ -2,11 +2,12 @@
     display: flex;
     justify-content: space-around;
     align-items: center;
-    position: absolute;
+    position: fixed;
     left: 0;
     right: 0;
     bottom: 0;
     border-top: 1px solid white;
+    background-color: #121212;
 }
 
 div {
