currentSong title suffix, Profilepicture loading

--- a/src/app/features/currentSong/currentSong.component.html
+++ b/src/app/features/currentSong/currentSong.component.html
@@ -1,7 +1,7 @@
 <a [href]="spotifyLink" id="current-song-spotify-link" target="_blank">
   <img [src]="currentSongImg" id="current-song-img">
   <div>
-    <p id="current-song-text-title">{{title}}</p>
+    <p id="current-song-text-title">{{title.length >= 22 ? ((title | slice:0:22) + '...') : title}}</p>
     <p id="current-song-text-author">{{author}}</p>
   </div>
 </a>
