cookieService, spotifyAPI callback

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,6 +1,6 @@
 <app-header title="Home"></app-header>
 <app-songListPreview [songs]="topSongs" title="Top Songs"></app-songListPreview>
 <app-artistListPreview [artists]="topArtists" title="Top Artists"></app-artistListPreview>
-<app-songListPreview [songs]="lastReleasesByTopArtists" title="Last Releases"></app-songListPreview>
+<app-songListPreview [songs]="lastReleasesByTopArtists" title="Last Singles"></app-songListPreview>
 <app-currentSong></app-currentSong>
 <app-navbar></app-navbar>
