--- a/src/app/features/artistPreview/artistPreview.component.html
+++ b/src/app/features/artistPreview/artistPreview.component.html
@@ -1,4 +1,4 @@
-<a [href]="link">
+<a [href]="artistLink">
   <img [src]="src" alt="Artist">
-  <p id="author">{{name}}</p>
+  <p id="author">{{artistName}}</p>
 </a>
