Footer component, default imgs, cache, search

--- a/src/app/features/header/header.component.html
+++ b/src/app/features/header/header.component.html
@@ -2,5 +2,5 @@
   {{title}}
 </h1>
 <a [routerLink]="['']">
-  <img [src]="profilePicture" id="profile-picture">
+  <img [src]="profilePicture !== '' ? profilePicture : '/assets/imgs/grey.jpg'" id="profile-picture">
 </a>
