--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -4,5 +4,6 @@
 <app-songListPreview [songs]="lastReleasesByTopArtist" listTitle="Last Releases"></app-songListPreview>
 <app-songListPreview [songs]="lastSinglesByTopArtists" listTitle="Last Singles"></app-songListPreview>
 <app-songListPreview [songs]="lastAlbumsByTopArtists" listTitle="Last Albums"></app-songListPreview>
+<app-footer></app-footer>
 <app-currentSong></app-currentSong>
 <app-navbar></app-navbar>
