--- a/src/app/features/search/search.component.html
+++ b/src/app/features/search/search.component.html
@@ -1,8 +1,15 @@
 <app-header title="Suche"></app-header>
 <div>
   <input type="text" [placeholder]="placeholderText" appHotkey="Enter" [hotkeyCallback]="search"
-    [hotkeyFocusRequired]="hotkeyFocusRequired">
-  <img src="assets/imgs/search.svg" alt="">
+    [hotkeyFocusRequired]="hotkeyFocusRequired" id="search" autocomplete="off" [value]="query" autofocus>
+  <img src="assets/imgs/search.svg" alt="Search" (click)="search()">
 </div>
+<div id="output">
+  <app-songListPreview [ngStyle]="{'display': albums.length === 0 ? 'none' : ''}" [songs]="albums"
+    listTitle="Albums"></app-songListPreview>
+  <app-artistListPreview [ngStyle]="{'display': albums.length === 0 ? 'none' : ''}" [artists]="artists"
+    listTitle="Artists"></app-artistListPreview>
+</div>
+<app-footer></app-footer>
 <app-currentSong></app-currentSong>
 <app-navbar></app-navbar>
