search output finished, navbar index, Artist.id

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -6,4 +6,4 @@
 <app-songListPreview [songs]="lastAlbumsByTopArtists" listTitle="Last Albums"></app-songListPreview>
 <app-footer></app-footer>
 <app-currentSong></app-currentSong>
-<app-navbar></app-navbar>
+<app-navbar [siteIndex]="0"></app-navbar>
