--- a/src/app/features/navbar/navbar.component.html
+++ b/src/app/features/navbar/navbar.component.html
@@ -1,12 +1,12 @@
-<div [routerLink]="['/home']" appHotkey="1">
+<div [routerLink]="['/home']" appHotkey="1" [ngClass]="{'selected': siteIndex === 0}">
   <img src="assets/imgs/home.svg" alt="Home">
   <p>Home</p>
 </div>
-<div [routerLink]="['/search']" appHotkey="2">
+<div [routerLink]="['/search']" appHotkey="2" [ngClass]="{'selected': siteIndex === 1}">
   <img src="assets/imgs/search.svg" alt="Search">
   <p>Suche</p>
 </div>
-<div [routerLink]="['/library']" appHotkey="3">
+<div [routerLink]="['/library']" appHotkey="3" [ngClass]="{'selected': siteIndex === 2}">
   <img src="assets/imgs/library.svg" alt="Library">
   <p>Bibliothek</p>
 </div>
