--- a/src/app/features/navbar/navbar.component.scss
+++ b/src/app/features/navbar/navbar.component.scss
@@ -11,6 +11,7 @@
 }
 
 div {
+    position: relative;
     padding-bottom: 10px;
     padding-top: 10px;
     display: flex;
@@ -24,4 +25,13 @@ div {
         height: 30px;
         margin-bottom: 5px;
     }
+}
+
+div.selected::before {
+    content: " ";
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 3px;
+    background-color: rgba(139, 139, 139, 0.08);
 }
