Use own application

--- a/src/app/features/login/login.component.html
+++ b/src/app/features/login/login.component.html
@@ -1,5 +1,6 @@
 <h1>Spotify Tracks</h1>
 <button (click)="connectionService.connectToSpotify()">
   <img src="assets/imgs/spotify-black.png" alt="">
-  <p>Login</p>
+  <p id="login">Login</p>
 </button>
+<p (click)="loginWithOwnClientId()">Use own application</p>
