--- a/src/app/features/search/search.component.html
+++ b/src/app/features/search/search.component.html
@@ -1,7 +1,9 @@
 <app-header title="Suche"></app-header>
+<app-filterWindow [ngStyle]="{'display': showFilterWindow ? '' : 'none'}"></app-filterWindow>
 <div>
   <input type="text" [placeholder]="placeholderText" appHotkey="Enter" [hotkeyCallback]="search"
     [hotkeyFocusRequired]="hotkeyFocusRequired" id="search" autocomplete="off" [value]="query" class="searchbar">
+  <img src="assets/imgs/filter.svg" alt="Filter" (click)="toggleFilterWindow()">
   <img src="assets/imgs/search.svg" alt="Search" (click)="search()">
 </div>
 <div id="output" [ngStyle]="{'display': albums.length === 0 ? 'none' : ''}">
