Updated Angular to v14

--- a/src/app/features/search/filterWindow/filterWindow.component.html
+++ b/src/app/features/search/filterWindow/filterWindow.component.html
@@ -1,1 +1,12 @@
-<h2>Filter</h2>
+<header>
+    <h3>Filter</h3>
+    <p id="close" (click)="closeWindow()">X</p>
+</header>
+<main>
+    <input type="text">
+</main>
+<footer>
+    <button>Zurücksetzen</button>
+    <button (click)="closeWindow()">Abbrechen</button>
+    <button>Speichern</button>
+</footer>
