--- a/src/app/features/search/search.component.scss
+++ b/src/app/features/search/search.component.scss
@@ -1,14 +1,3 @@
-app-filterWindow {
-    position: absolute;
-    left: 50%;
-    translate: -50%;
-    width: 90%;
-    background-color: #555555;
-    border-radius: 15px;
-    min-height: 80vh;
-    z-index: 2;
-}
-
 div:not(#output) {
     background-color: #555555;
     position: relative;
@@ -35,10 +24,24 @@ div:not(#output) {
         }
     }
 
-    img {
+    img,
+    span {
         height: 30px;
         margin-left: 20px;
         cursor: pointer;
+        position: relative;
+
+        &#filter::before {
+            content: "";
+            position: absolute;
+            z-index: 2;
+            top: 0;
+            right: 0;
+            height: 10px;
+            width: 10px;
+            background-color: red;
+            border-radius: 20px;
+        }
     }
 }
 
