--- a/src/app/features/search/search.component.html
+++ b/src/app/features/search/search.component.html
@@ -1,13 +1,12 @@
 <app-header title="Suche"></app-header>
 <app-filterWindow [ngStyle]="{'display': showFilterWindow ? '' : 'none'}"></app-filterWindow>
 <div>
-  <input type="text" [placeholder]="placeholderText" appHotkey="Enter" [hotkeyCallback]="search"
-    [hotkeyCallbackParams]="[this]" [hotkeyFocusRequired]="hotkeyFocusRequired" id="search" autocomplete="off"
+  <input type="text" [placeholder]="placeholderText" appHotkey="Enter" (onHotKey)="search()" [hotkeyFocusRequired]="hotkeyFocusRequired" id="search" autocomplete="off"
     [value]="query" class="searchbar">
   <span id="filter">
     <img src="assets/imgs/filter.svg" alt="Filter" (click)="toggleFilterWindow()">
   </span>
-  <img src="assets/imgs/search.svg" alt="Search" (click)="search(this)">
+  <img src="assets/imgs/search.svg" alt="Search" (click)="search()">
 </div>
 <div id="output" [ngStyle]="{'display': albums.length === 0 ? 'none' : ''}">
   <app-songListPreview [songs]="albums" listTitle="Albums"></app-songListPreview>
